--- a/googlemaps/googlemaps.html
+++ b/googlemaps/googlemaps.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
       #map {
         height: 100%;
       }
@@ -23,8 +21,8 @@
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+          center: {lat: 48.1962561, lng: 16.3596964},
+          zoom: 18
         });
       }
     </script>
