--- a/googlemaps/googlemaps.html
+++ b/googlemaps/googlemaps.html
@@ -6,7 +6,12 @@
     <meta charset="utf-8">
     <style>
       #map {
-        height: 100%;
+        height: 500px;
+        width: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
       html, body {
         height: 100%;
