Add google map with style and onclick event using marker

--- a/facebook._api/facebook.html
+++ b/facebook._api/facebook.html
@@ -62,7 +62,7 @@
   <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '',
+      appId      : '1978170242293936',
       cookie     : true,
       xfbml      : true,
       version    : 'v3.2'
