Add benjamin folder with modal popup

--- a/testing/index_fetch.html
+++ b/testing/index_fetch.html
@@ -52,7 +52,7 @@ $("#test").keyup(function(event){
 
    // Fire off the request to /form.php ->JULAN or the php file you are working on
    request = $.ajax({
-       url: "/testing/form_fetch.php",
+       url: "form_fetch.php",
        type: "post",
        data: serializedData
    });
